Add unbound analysis support for copy to statement.